1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* AppendFile.[hm] ([AppendFile +create:setName:]): Renamed from
	+create:withName:. 

	* OutFile.[hm] ([OutFile +create:setName:]): Likewise.

	* InFile.[hm] ([InFile +create:setName:]): Likewise.

	* simtools.h: Reflect these changes.

1999-06-21  Alex Lancaster  <alex@santafe.edu>

	* simtools.h (InFile, OutFile, AppendFile, ObjectSaver,
	ObjectLoader): Markup with `//x:' doc-string as deprecated
	protocols.  Move explanatory text originally in `//D:' markup to
	new tag, where appropriate.

	* Makefile.am (simtools_HEADERS): Add initSwarm.h.

	* initSwarm.h: New file

	* simtools.h (_initSwarm_, STRINGIFY, STRINGIFYSYM,
	APPNAME_STRING, APPVERSION_STRING, BUGADDRESS_STRING): Remove,
	hide from user in new include'd initSwarm.h.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.m (run_constructors): New static function.
	(_initSwarm_): Call it for hpux.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* simtools.h: Stringify application name, version, and bug address.
	(Don't require quoting from make.)

1999-06-09  Alex Lancaster  <alex@santafe.edu>

	* simtools.m (_initSwarm_): New function, made from the old init()
	function with a new argument `appName'.  Make non-static.  Pass
	appName to initDefobj() call.
	(init): Remove old internal static function.
	(initSwarm{Batch, App, AppBatch, AppOptions, AppOptionsBatch}):
	Remove functions, now macros in simtools.h.

	* simtools.h (initSwarm): Redefine as a macro. Call new internal
	function _initSwarm_().  If not explicitly set by the macro, pass
	APPNAME, BUGADDRESS, APPVERSION which will be passed from the
	application Makefile to the internal _initSwarm_().
	(initSwarmBatch): Likewise.
	(initSwarmApp): Likewise.
	(initSwarmAppBatch): Likewise.
	(initSwarmAppOptions): Likewise.
	(initSwarmAppOptionsBatch): Likewise
	(_initSwarm_):  Define internal function.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
